# ED22-01-Cortes-Guerra

./: README.md
docs/: BITACORA.md  README.md
src/: BinarySearchTree.cpp  BinarySearchTree.hpp  BinarySearchTreeNode.hpp  CMakeCache.txt  CMakeLists.txt  Detector.cpp  Detector.hpp  ListaEnlazada.cpp  ListaEnlazada.hpp  Makefile  Nodo.cpp  Nodo.hpp  Persona.hpp  cmake_install.cmake  compile_commands.json  main.cpp  null.d  opencv
src/DetectarPersona/: DetectorPersona.cpp  DetectorPersona.hpp  main.cpp
